proy 1 completo refactored
